# xyzservices

./: .coveragerc  .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  MANIFEST.in  Makefile  README.md  codecov.yml  pyproject.toml  pytest.ini  readthedocs.yml  setup.cfg  setup.py  versioneer.py
.github/PULL_REQUEST_TEMPLATE/: community_contribution.md
.github/workflows/: compress_providers.yaml  release_to_pypi.yml  test_providers.yml  tests.yaml  update_providers.yaml
ci/: latest.yaml  update_providers.yaml
doc/: environment.yml  requirements.txt
doc/source/: api.rst  conf.py  contributing.md  gallery.rst  index.md  introduction.ipynb  registration.md
doc/source/_static/: custom.css  gallery.html  generate_gallery.js  styles.css
provider_sources/: _compress_providers.py  _parse_leaflet_providers.py  leaflet-providers-parsed.json  xyzservices-providers.json
tests/: test_against_contextily.py  test_lib.py  test_providers.py
xyzservices/: __init__.py  _compress_providers.py  _parse_leaflet_providers.py  _providers.py  _version.py  lib.py  parse_leaflet_providers.py  providers.py
xyzservices/data/: generate_providers.py  initial_providers.json  providers.json
xyzservices/provider_sources/: leaflet-providers-parsed.json  leaflet-providers-raw.json
xyzservices/tests/: test_lib.py  test_providers.py
