[build-system]
requires = ["setuptools>=77", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "xyzservices"
description = "Source of XYZ tiles providers"
readme = "README.md"
requires-python = ">=3.8"
license = "BSD-3-Clause"
authors = [
    { name = "Dani Arribas-Bel", email = "daniel.arribas.bel@gmail.com" },
    { name = "Martin Fleischmann", email = "martin@martinfleischmann.net" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3 :: Only",
]
dynamic = ["version"]
license-files = ["LICENSE"]

[project.urls]
Homepage = "https://github.com/geopandas/xyzservices"
Repository = "https://github.com/geopandas/xyzservices"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["xyzservices*"]
namespaces = false
exclude = ["tests"]

[tool.setuptools.package-data]
xyzservices = ["data/providers.json"]

[tool.setuptools.data-files]
"share/xyzservices" = ["xyzservices/data/providers.json"]

[tool.setuptools_scm]

[tool.ruff]
line-length = 88
lint.select = ["E", "F", "W", "I", "UP", "N", "B", "A", "C4", "SIM", "ARG"]
exclude = ["provider_sources/_compress_providers.py", "doc"]
target-version = "py38"
lint.ignore = ["B006", "A003", "B904", "C420"]

[tool.pytest.ini_options]
markers = [
    "request: fetching tiles from remote server.",
]

[tool.coverage.run]
omit = ["xyzservices/tests/*"]
